--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
       <li>i love mcr</li>
+      <li>i love cs!</li>
     </ul>
    </nav>
   </section>
