--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
       <li>i love mcr</li>
       <li>i love cs!</li>
+      <li><a href="./public/Q12GCesiumAbabon.html"> Second Graded Exercise </a> 
+      </li> 
     </ul>
    </nav>
   </section>
