--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
    <nav>
     <ul>
       <li><a href="./public/Q1_1stGraded.html"> First Exercise </a> </li>
+      <li><a href="./public/Q1_1NGCsAbabon.html"> First Nongraded </a></li>
       <li>i love mcr</li>
       <li>i love cs!</li>
       <li><a href="./public/Q12GCesiumAbabon.html"> Second Graded Exercise </a> 
